--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,6 +7,6 @@
       <li><a href="/">Blogs</a></li>
       <li><a href="/about">About</a></li>
       <li><a href="/blogs/create">New Blog</a></li>
-      <li><a href="/api">Check API</a></li>
+      <li><a href="/api">Check Weather</a></li>
     </ul>
 </nav>
